--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-validation": "^3.0.7",
     "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
